** Added study programme selection support to student projects ** Fixed bug in ixtable's autocomplete field that caused setEditable method calls to drop visible values ** Added link to transfer credits management to edit student related actions

--- a/Pyramus/WebContent/css/theme.css
+++ b/Pyramus/WebContent/css/theme.css
@@ -1922,6 +1922,22 @@ img.studentContactEntryEditButton, img.studentContactEntryArchiveButton{
   min-height:0;
 }
 
+/* manage transfer credits */
+
+#manageTransferCredits .genericFormSection {
+  margin-left:8px;
+}
+
+#transferCreditsCountContainer {
+  margin-left: 8px;
+  margin-top: 8px;
+}
+
+#transferCreditsCountContainer div {
+  display: inline-block;   
+  font-weight: bold;
+}
+
 /* Search User Dialog */
 
 #searchUserDialogSearchContainer.modalSearchContainer {
